--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,10 +1,7 @@
+@import './libs/reset.css';
+// @import './libs/mobile';
+@import './libs/animate';
+@import './common/layout';
 
-
-
-@import './common/reset.css';
-// @import './common/mobile';
-@import './common/animate';
-// @import './common/layout';
-// @import './common/common';
 
 
