--- a/src/css/common/layout.scss
+++ b/src/css/common/layout.scss
@@ -8,6 +8,7 @@
 */
 
 html {
+    $k: $designWidth/$oneRemForDesignWidth;
     font-family: $yh;
     font-size:calc(100vw/#{$k});
     @media screen and (max-width: $minScreenWidth) {
